salesforce-main/src/main/default/objects/Opportunity/fields/Academic_Reference_Email__c.field-meta.xml
<CustomField>
    <fullName>Academic_Reference_Email__c</fullName>
    <description>Field to store the email address of the Academic Reference.</description>
    <label>Academic Reference Email</label>
    <type>Email</type>
</CustomField>