salesforce-main/src/main/default/objects/Opportunity/fields/Academic_Reference_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_Reference_First_Name__c</fullName>
    <description>Field to store the first name of the Academic Reference.</description>
    <label>Academic Reference First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>