salesforce-main/src/main/default/objects/Opportunity/fields/Academic_Reference_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_Reference_Last_Name__c</fullName>
    <description>Field to store the last name of the Academic Reference.</description>
    <label>Academic Reference Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>