salesforce-main/src/main/default/objects/Opportunity/fields/Academic_Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>Academic_Reference_Phone__c</fullName>
    <description>Field to store the phone number of the Academic Reference.</description>
    <label>Academic Reference Phone</label>
    <type>Phone</type>
</CustomField>