salesforce-main/src/main/default/objects/Opportunity/fields/Academic_Reference_Relation__c.field-meta.xml
<CustomField>
    <fullName>Academic_Reference_Relation__c</fullName>
    <description>Field to store the relation of the Academic Reference.</description>
    <label>Academic Reference Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>