salesforce-main/src/main/default/objects/Opportunity/fields/ACCA_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>ACCA_Status_Report__c</fullName>
    <label>ACCA Status Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Documents</valueSetName>
    </valueSet>
</CustomField>