salesforce-main/src/main/default/objects/Opportunity/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <description>Date application has been accepted.  Populated via workflow rules automatically within Salesforce.  Should not be populated via external systems.</description>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>