salesforce-main/src/main/default/objects/Opportunity/fields/Additional_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Additional_Qualifications__c</fullName>
    <description>Not currently used after purge of qualification fields from opportunity.

Long text field to describe any additional relevant qualifications the student may have in relationship to this particular interest/application.</description>
    <label>[INACTIVE] Additional Qualifications</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>