salesforce-main/src/main/default/objects/Opportunity/fields/Address_Active__c.field-meta.xml
<CustomField>
    <fullName>Address_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the student-provided address is currently in use</description>
    <label>Active Address</label>
    <type>Checkbox</type>
</CustomField>