salesforce-main/src/main/default/objects/Opportunity/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <description>The city of the address provided by the student</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>