salesforce-main/src/main/default/objects/Opportunity/fields/Address_Locality__c.field-meta.xml
<CustomField>
    <fullName>Address_Locality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The locality of the address provided by the student</description>
    <label>Locality</label>
    <referenceTo>Locality__c</referenceTo>
    <relationshipLabel>Opportunity Addresses</relationshipLabel>
    <relationshipName>Opportunity_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>