salesforce-main/src/main/default/objects/Opportunity/fields/Address_Lookup_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Lookup_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The country associated with the address provided by the student</description>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Country value you have selected is not a valid Nationality.</errorMessage>
        <filterItems>
            <field>country_list__c.Valid_Nationality__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Opportunity_Addresses</relationshipLabel>
    <relationshipName>Opportunity_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>