salesforce-main/src/main/default/objects/Opportunity/fields/Address_Primary__c.field-meta.xml
<CustomField>
    <fullName>Address_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the address is the student&apos;s primary address</description>
    <label>Primary Address</label>
    <type>Checkbox</type>
</CustomField>