salesforce-main/src/main/default/objects/Opportunity/fields/Address_Primary_Billing__c.field-meta.xml
<CustomField>
    <fullName>Address_Primary_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the address is the student&apos;s billing address</description>
    <label>Primary Billing?</label>
    <type>Checkbox</type>
</CustomField>