salesforce-main/src/main/default/objects/Opportunity/fields/Address_Primary_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Address_Primary_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the address is the student&apos;s primary delivery address</description>
    <label>Primary Delivery?</label>
    <type>Checkbox</type>
</CustomField>