salesforce-main/src/main/default/objects/Opportunity/fields/Address_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Address_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The state or province associated with the address provided by the student</description>
    <label>State/Province</label>
    <referenceTo>State_Province__c</referenceTo>
    <relationshipLabel>Opportunity Addresses</relationshipLabel>
    <relationshipName>Opportunity_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>