salesforce-main/src/main/default/objects/Opportunity/fields/Address_Street_1__c.field-meta.xml
<CustomField>+
    <fullName>Address_Street_1__c</fullName>
    <description>The first line of the address provided by the student</description>
    <label>Address Line 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>