salesforce-main/src/main/default/objects/Opportunity/fields/Address_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Street_2__c</fullName>
    <description>The second line of the address provided by the student</description>
    <label>Address Line 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>