salesforce-main/src/main/default/objects/Opportunity/fields/Address_Street_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Street_3__c</fullName>
    <description>The third line of the address provided by the student</description>
    <label>Address Line 3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>