salesforce-main/src/main/default/objects/Opportunity/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>The type of address which was provided by the student</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
            <value>
                <fullName>Next of Kin/Emergency/Guardian</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>