salesforce-main/src/main/default/objects/Opportunity/fields/Address_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Postal_Code__c</fullName>
    <description>The postal code of the address provided by the student</description>
    <label>Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>