salesforce-main/src/main/default/objects/Opportunity/fields/Advocacy_Video_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Video_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when an (external) Advocacy video has been received</description>
    <label>Advocacy Video Submitted</label>
    <type>Checkbox</type>
</CustomField>