salesforce-main/src/main/default/objects/Opportunity/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>