salesforce-main/src/main/default/objects/Opportunity/fields/Any_close_relatives_in_UK__c.field-meta.xml
<CustomField>
    <fullName>Any_close_relatives_in_UK__c</fullName>
    <label>Any close relatives in UK</label>
    <length>40</length>
    <type>Text</type>
</CustomField>