salesforce-main/src/main/default/objects/Opportunity/fields/AP_ID__c.field-meta.xml
<CustomField>
    <fullName>AP_ID__c</fullName>
    <description>Salesforce unique ID for each opportunity.  Used to reference microsite deposit payments and cross-referenced in Athena.</description>
    <displayFormat>AP{0}</displayFormat>
    <externalId>true</externalId>
    <label>Application ID</label>
    <type>AutoNumber</type>
</CustomField>