salesforce-main/src/main/default/objects/Opportunity/fields/APELCRD__c.field-meta.xml
<CustomField>
    <fullName>APELCRD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accreditation of Prior Experiential Learning</description>
    <label>APELCRD?</label>
    <type>Checkbox</type>
</CustomField>