salesforce-main/src/main/default/objects/Opportunity/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date student applied for this particular application.  Automatically populated through Salesforce via workflow rule.  Should not be populated through external systems.</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>