salesforce-main/src/main/default/objects/Opportunity/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <description>Application ID from event</description>
    <externalId>true</externalId>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>