salesforce-main/src/main/default/objects/Opportunity/fields/Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference__c</fullName>
    <description>Application Reference created and provided by the 2023 Application Service</description>
    <label>Application Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>