salesforce-main/src/main/default/objects/Opportunity/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <defaultValue>CASE( $RecordType.Name, 
&quot;Interest&quot;, &quot;University&quot;, 
&quot;Application&quot;, &quot;University&quot;, 
&quot;PE Booking&quot;, &quot;Professional Qualification&quot;, 
&quot;&quot;)</defaultValue>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>University Application</fullName>
            </value>
            <value>
                <fullName>Degree Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Professional Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Professional Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>