salesforce-main/src/main/default/objects/Opportunity/fields/Application_Wizard_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_Wizard_ID__c</fullName>
    <label>Application Wizard ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>