salesforce-main/src/main/default/objects/Opportunity/fields/Applied_to_Other_University__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Other_University__c</fullName>
    <description>Indicates if this student has applied to another university for the same or similar program as this application.</description>
    <label>Applied to Other University</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>