salesforce-main/src/main/default/objects/Opportunity/fields/Applied_to_Other_University_Detail__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Other_University_Detail__c</fullName>
    <description>Details of that student&apos;s application to another university for a similar program</description>
    <label>Applied to Other University Detail</label>
    <type>TextArea</type>
</CustomField>