salesforce-main/src/main/default/objects/Opportunity/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>