salesforce-main/src/main/default/objects/Opportunity/fields/AuthorisedOn__c.field-meta.xml
<CustomField>
    <fullName>AuthorisedOn__c</fullName>
    <description>The datetime that the application was moved into Acceptance, used in applicationStageChange event</description>
    <label>AuthorisedOn</label>
    <type>DateTime</type>
</CustomField>