salesforce-main/src/main/default/objects/Opportunity/fields/Authoriser__c.field-meta.xml
<CustomField>
    <fullName>Authoriser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the user that approved the application, this is sent to Join in an applicationStageChanged event</description>
    <label>Authoriser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuthorisedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>