salesforce-main/src/main/default/objects/Opportunity/fields/Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto close the opportunity when the close date is reached if still open (will reject the primary quote)</description>
    <label>Auto Close</label>
    <type>Checkbox</type>
</CustomField>