salesforce-main/src/main/default/objects/Opportunity/fields/BCAT__c.field-meta.xml
<CustomField>
    <fullName>BCAT__c</fullName>
    <label>BCAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Documents</valueSetName>
    </valueSet>
</CustomField>