salesforce-main/src/main/default/objects/Opportunity/fields/BD_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BD_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the Business Development opportunity agreed with the Client which covers the Apprenticeship application it is related to</description>
    <label>BD Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Development</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (BD Opportunity)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>