salesforce-main/src/main/default/objects/Opportunity/fields/BNR_Application_Decision_Comment__c.field-meta.xml
<CustomField>
    <fullName>BNR_Application_Decision_Comment__c</fullName>
    <description>Added for SIS Integrations.</description>
    <label>Application Decision Comment</label>
    <type>TextArea</type>
</CustomField>