salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_ACCA__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_ACCA__c</fullName>
    <description>ACCA Registration Card Checklist Item</description>
    <label>ACCA Registration Card</label>
    <type>Date</type>
</CustomField>