salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_ACRT__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_ACRT__c</fullName>
    <description>Academic Certificates Checklist Item</description>
    <label>Academic Certificates</label>
    <type>Date</type>
</CustomField>