salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_AFEE__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_AFEE__c</fullName>
    <label>Application Fee</label>
    <type>Date</type>
</CustomField>