salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_ALCR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_ALCR__c</fullName>
    <description>A Level Certificate Checklist Item</description>
    <label>A Level Certificate</label>
    <type>Date</type>
</CustomField>