salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_ASCR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_ASCR__c</fullName>
    <description>Academic Standing certificate Checklist Item</description>
    <label>Academic Standing certificate</label>
    <type>Date</type>
</CustomField>