salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_ATRC__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_ATRC__c</fullName>
    <description>UK Attendance Record (Other) Checklist Item</description>
    <label>UK Attendance Record (Other)</label>
    <type>Date</type>
</CustomField>