salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_DGCR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_DGCR__c</fullName>
    <description>Degree Certificate Checklist Item</description>
    <label>Degree Certificate</label>
    <type>Date</type>
</CustomField>