salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_DGTR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_DGTR__c</fullName>
    <description>Degree transcripts Checklist Item</description>
    <label>Degree transcripts</label>
    <type>Date</type>
</CustomField>