salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_DPST__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_DPST__c</fullName>
    <description>Deposit Checklist Item</description>
    <label>Deposit</label>
    <type>Date</type>
</CustomField>