salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_ELTS__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_ELTS__c</fullName>
    <description>English Language Test Checklist Item</description>
    <label>English Language Test</label>
    <type>Date</type>
</CustomField>