salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_EXCR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_EXCR__c</fullName>
    <description>Exemptions certificate Checklist Item</description>
    <label>Exemptions certificate</label>
    <type>Date</type>
</CustomField>