salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_GCGR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_GCGR__c</fullName>
    <description>GDL/CPE transcript Checklist Item</description>
    <label>GDL/CPE transcript</label>
    <type>Date</type>
</CustomField>