salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_GDLC__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_GDLC__c</fullName>
    <description>GDL certificate Checklist Item</description>
    <label>GDL certificate</label>
    <type>Date</type>
</CustomField>