salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_IALE__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_IALE__c</fullName>
    <description>International A level equival Checklist Item</description>
    <label>International A level equival</label>
    <type>Date</type>
</CustomField>