salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_IELT__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_IELT__c</fullName>
    <description>IELTS certificate Checklist Item</description>
    <label>IELTS certificate</label>
    <type>Date</type>
</CustomField>