salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_IGLE__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_IGLE__c</fullName>
    <description>International GCSE equivalent Checklist Item</description>
    <label>International GCSE equivalent</label>
    <type>Date</type>
</CustomField>