salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_INNC__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_INNC__c</fullName>
    <description>Inn membership card/letter Checklist Item</description>
    <label>Inn membership card/letter</label>
    <type>Date</type>
</CustomField>