salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_LBVC__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_LBVC__c</fullName>
    <description>LPC/BVC transcript Checklist Item</description>
    <label>LPC/BVC transcript</label>
    <type>Date</type>
</CustomField>