salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_LPTC__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_LPTC__c</fullName>
    <description>LPC/BPTC Transcript  Checklist Item</description>
    <label>LPC/BPTC Transcript</label>
    <type>Date</type>
</CustomField>