salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_LWDG__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_LWDG__c</fullName>
    <description>Law Degree Checklist Item</description>
    <label>Law Degree</label>
    <type>Date</type>
</CustomField>