salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_NLDC__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_NLDC__c</fullName>
    <description>Non-Law degree certificate Checklist Item</description>
    <label>Non-Law degree certificate</label>
    <type>Date</type>
</CustomField>