salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_PASS__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_PASS__c</fullName>
    <description>Passport Checklist Item</description>
    <label>Passport</label>
    <type>Date</type>
</CustomField>