salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_REFR__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_REFR__c</fullName>
    <description>References Checklist Item</description>
    <label>References</label>
    <type>Date</type>
</CustomField>