salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_RVIS__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_RVIS__c</fullName>
    <description>VISA Refusal Copy Checklist Item</description>
    <label>VISA Refusal Copy</label>
    <type>Date</type>
</CustomField>