salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_SLCL__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_SLCL__c</fullName>
    <description>SLC letter Checklist Item</description>
    <label>SLC letter</label>
    <type>Date</type>
</CustomField>