salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_SRAM__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_SRAM__c</fullName>
    <description>SRA membership Checklist Item</description>
    <label>SRA membership</label>
    <type>Date</type>
</CustomField>