salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_SRAT__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_SRAT__c</fullName>
    <description>SRA trng confirmation Checklist Item</description>
    <label>SRA trng confirmation</label>
    <type>Date</type>
</CustomField>