salesforce-main/src/main/default/objects/Opportunity/fields/BNR_CHK_VISA__c.field-meta.xml
<CustomField>
    <fullName>BNR_CHK_VISA__c</fullName>
    <description>Visa Checklist Item (non-EU Student)</description>
    <label>Visa(non-EU student)</label>
    <type>Date</type>
</CustomField>