salesforce-main/src/main/default/objects/Opportunity/fields/BNR_Curriculum_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_Status_Code__c</fullName>
    <label>Curriculum Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>