salesforce-main/src/main/default/objects/Opportunity/fields/BNR_Curriculum_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>BNR_Curriculum_Status_Description__c</fullName>
    <label>Curriculum Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>