salesforce-main/src/main/default/objects/Opportunity/fields/BNR_Degree_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>BNR_Degree_Code_Text__c</fullName>
    <label>Degree Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>