salesforce-main/src/main/default/objects/Opportunity/fields/BPP_ACI_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_ACI_Request_Date__c</fullName>
    <description>Records date/time of Academic Credibility Interview request</description>
    <label>ACI Request Date</label>
    <type>DateTime</type>
</CustomField>