salesforce-main/src/main/default/objects/Opportunity/fields/BPP_ACI_Requested__c.field-meta.xml
<CustomField>
    <fullName>BPP_ACI_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records Academic Credibility Interview request</description>
    <label>ACI Requested</label>
    <type>Checkbox</type>
</CustomField>