salesforce-main/src/main/default/objects/Opportunity/fields/BPP_BCA_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>BPP_BCA_Discount_Code__c</fullName>
    <description>BCA Discount Code picklist for &apos;CAS VISA Compliance&apos; section located on the &apos;Application&apos; Opportunity Record Type</description>
    <label>BCA Discount Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawn and left UK</fullName>
            </value>
            <value>
                <fullName>IOS&apos;d and left the UK</fullName>
            </value>
            <value>
                <fullName>Switched Institution Switched</fullName>
            </value>
            <value>
                <fullName>Immigration Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>